# fileEncrypt

./: CMakeLists.txt  README.md  install.sh  prova.json
src/: fileEncrypt.cpp
